# veles

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/veles/: __init__.py
veles/: pyproject.toml
veles/repositories/SQL_repositories/: SQLRepository.py
veles/repositories/SQL_repositories/MySQL_repositories/: MySQLRepository.py
veles/repositories/SQL_repositories/MySQL_repositories/PyMySQL_repositories/: CredentialsDTO.py  PyMySQLRepository.py
veles_vh.egg-info/: PKG-INFO
