[build-system]
    requires = ["setuptools", "wheel"]
    build-backend = "setuptools.build_meta"

[project]
    name = "veles-vh"
    version = "0.1.9"
    description = "Veles miniframework"
    readme = "README.md"
    requires-python = ">=3.10"
    license = { text = "MIT" }
    authors = [
        { name = "Vadym Hutei", email = "hutei@live.com" },
    ]
    classifiers = [
        "Programming Language :: Python :: 3",
        "Operating System :: OS Independent",
    ]
    urls = { Homepage = "https://github.com/VadymHutei/veles", Issues = "https://github.com/VadymHutei/veles/issues" }
    dependencies = []

[tool.setuptools.packages.find]
    where = ["src"]
    include = ["veles"]